Fix: Have Shaka's big play button always shown on load
For some reason, previously the button would sometimes be invisible when
loading or reloading the page.

--- a/Resources/Private/Less/VideoPlayer/VideoPlayer.less
+++ b/Resources/Private/Less/VideoPlayer/VideoPlayer.less
@@ -15,12 +15,6 @@
 
     .media-viewport {
         overflow: auto;
-
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        flex-wrap: wrap;
     }
 
     .thumbnail-preview {
